--- a/index.html
+++ b/index.html
@@ -4,7 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter Signup</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Reset some default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Add padding to the top of the body */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffeaa7; /* Light yellow background */
+            padding-top: 20px; /* Adjust the value as needed */
+        }
+
+        /* Header styles */
+        header {
+            background-color: #fdcb6e; /* Orange background */
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+        }
+
+        /* Form styles */
+        main {
+            text-align: center;
+            margin: 2rem auto;
+            max-width: 400px;
+            background-color: #ffffff; /* White background */
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        label {
+            margin-bottom: 0.5rem;
+        }
+
+        input[type="email"] {
+            width: 100%;
+            padding: 0.5rem;
+            margin-bottom: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+
+        button {
+            background-color: #fc5c65; /* Red background */
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            border-radius: 3px;
+            transition: background-color 0.3s; /* Smooth color transition on hover */
+        }
+
+        button:hover {
+            background-color: #ff4757; /* Darker red on hover */
+        }
+
+        /* Footer styles */
+        footer {
+            background-color: #34495e; /* Dark blue background */
+            color: #fff;
+            text-align: center;
+            padding: 0.5rem;
+        }
+    </style>
 </head>
 <body>
     <header>
